--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
         <link rel="stylesheet" href="highlight.css" />
         <script src="index.js" type="text/javascript"></script>
         <script src="highlight.js" type="text/javascript"></script>
+        <script src="fuckterpreter.js" type="text/javascript"></script>
         <noscript>
             This website won't work without JavaScript. Source is at __.
         </noscript>
     </head>
     <body>
-        <div id="top-bar">
+        <div id="cellsBar">
 
         </div>
         <div id="main">
-            <div id="editor">
-                <textarea id="editorContent"></textarea>
-                <div id="editorCover"></div>
+            <div class="row">
+                <div id="editor">
+                    <textarea id="editorContent"></textarea>
+                    <div id="editorCover"></div>
+                </div>
+            </div>
+            <div class="row">
+                <button id="runCode">Run code</button>
+                <div id="output">
+
+                </div>
             </div>
         </div>
     </body>
