show contents of cells, add support for stepthrough execution

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             <div class="row">
                 <button id="runCode">Run code</button>
+                <button id="stepForward">Step through</button>
                 <div id="output">
 
                 </div>
