add input field

--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@ Pointer :   ^
             <div class="row">
                 <button id="runCode">Run code</button>
                 <button id="stepForward">Step through</button>
+                <div class="iotext">
+                    In: 
+                </div>
+                <input id="input" type="text"></input>
+                <div class="iotext">
+                    Out: 
+                </div>
                 <div id="output">
 
                 </div>
