don't execute by cursor position

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Pointer :   ^
 >>+.                    Add 1 to Cell #5 gives us an exclamation point
 >++.                    And finally a newline from Cell #6
 
-                    </textarea>
+</textarea>
                     <div id="editorCover"></div>
                 </div>
             </div>
@@ -70,6 +70,25 @@ Pointer :   ^
                 </div>
                 <div id="output">
 
+                </div>
+            </div>
+            <div class="row">
+                <div id="options">
+                    <span>Options:</span>
+                    <ul>
+                        <li>
+                            <label>
+                                <input type="checkbox" id="optAutorun" checked />
+                                Automatically run written code based on cursor position
+                            </label>
+                        </li>
+                        <li>
+                            <label>
+                                <input type="checkbox" id="optHighlight" checked />
+                                Highlight current code position
+                            </label>
+                        </li>
+                    </ul> 
                 </div>
             </div>
         </div>
